syntax = "proto3";
package person;
option go_package="./person";
message Person{
  string person_name = 1;
  string person_address = 2;
  int64 person_age = 3;
  int64 person_id = 4;
}